<resources>
    <string name="app_name">G7_Trivia_Game</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="past_questions">Past Questions</string>
    <string name="play_trivia">Play Trivia</string>
    <string name="admin_menu">Admin Menu</string>
    <string name="createAccount_create_account">Create Account</string>
    <string name="createAccount_enter_username">Enter username</string>
    <string name="createAccount_enter_password">Enter password</string>
    <string name="createAccount_confirm_password">Confirm password</string>
    <string name="createAccount_create_account_button">Create Account</string>
    <string name="createAccount_back">Back</string>
    <string name="login_g7_trivia_game">G7 Trivia Game</string>
    <string name="login_enter_username">Enter username</string>
    <string name="login_enter_password">Enter password</string>
    <string name="login_login">Login</string>
    <string name="login_create_account">Create Account</string>
    <string name="preference_userId_key" />
    <string name="preference_file_key" />
    <string name="create_question">Create Question</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="create_category">Create Category</string>
    <string name="welcome_menu">Welcome Menu</string>
    <string name="back">Back</string>
    <string name="_1">#1</string>
    <string name="create_a_question">Create a Question</string>
    <string name="type_your_question_here">Type your question here...</string>
    <string name="submit">Submit</string>
    <string name="points">Points</string>
    <string name="category">Category</string>
    <string name="logout">Logout</string>
</resources>