<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <TextView
        android:id="@+id/createAccountTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="@string/createAccount_create_account"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createAccountUsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="40dp"
        android:ems="12"
        android:hint="@string/createAccount_enter_username"
        android:inputType="text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountTitleTextView" />

    <EditText
        android:id="@+id/createAccountPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:ems="12"
        android:hint="@string/createAccount_enter_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountUsernameEditText" />

    <EditText
        android:id="@+id/createAccountConfirmEditText"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:ems="12"
        android:hint="@string/createAccount_confirm_password"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountPasswordEditText" />

    <Button
        android:id="@+id/createAccountCreateAccountButton"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/createAccount_create_account_button"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountConfirmEditText" />

    <Button
        android:id="@+id/createAccountBackButton"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/createAccount_back"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAccountCreateAccountButton" />
</androidx.constraintlayout.widget.ConstraintLayout>